tests/baselines/reference/returnTypeTypeArguments.errors.txt
==== tests/cases/compiler/returnTypeTypeArguments.ts (37 errors) ====
    class One<T>{
        value: T;
    }
    class Two<T, U>{
        value: T;
        id: U;
    }
    class Three<T, U, V>{
        value: T;
        id: U;
        name: V;
    }
    
    function A1(): One { return null; }
                   ~~~
!!! error TS2314: Generic type 'One<T>' requires 1 type argument(s).
    function A2(): Two { return null; }
                   ~~~
!!! error TS2314: Generic type 'Two<T, U>' requires 2 type argument(s).
    function A3(): Three { return null; }
                   ~~~~~
!!! error TS2314: Generic type 'Three<T, U, V>' requires 3 type argument(s).
    
    function B1(): Two<number> { return null; }
                   ~~~~~~~~~~~
!!! error TS2314: Generic type 'Two<T, U>' requires 2 type argument(s).
    function B2(): Three<string> { return null; }
                   ~~~~~~~~~~~~~
!!! error TS2314: Generic type 'Three<T, U, V>' requires 3 type argument(s).
    function B3(): Three<string, number> { return null; }
                   ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2314: Generic type 'Three<T, U, V>' requires 3 type argument(s).
    
    class C {
        A1(): One { return null; }
              ~~~
!!! error TS2314: Generic type 'One<T>' requires 1 type argument(s).
        A2(): Two { return null; }
              ~~~
!!! error TS2314: Generic type 'Two<T, U>' requires 2 type argument(s).
        A3(): Three { return null; }
              ~~~~~
!!! error TS2314: Generic type 'Three<T, U, V>' requires 3 type argument(s).
    
        B1(): Two<number> { return null; }
              ~~~~~~~~~~~
!!! error TS2314: Generic type 'Two<T, U>' requires 2 type argument(s).
        B2(): Three<string> { return null; }
              ~~~~~~~~~~~~~
!!! error TS2314: Generic type 'Three<T, U, V>' requires 3 type argument(s).
        B3(): Three<string, number> { return null; }
              ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2314: Generic type 'Three<T, U, V>' requires 3 type argument(s).
    }
    
    class D<T> {
        A2(): Two<T> { return null; }
              ~~~~~~
!!! error TS2314: Generic type 'Two<T, U>' requires 2 type argument(s).
        A3(): Three<T> { return null; }
              ~~~~~~~~
!!! error TS2314: Generic type 'Three<T, U, V>' requires 3 type argument(s).
    
        B1(): Two<T> { return null; }
              ~~~~~~
!!! error TS2314: Generic type 'Two<T, U>' requires 2 type argument(s).
        B2(): Three<T> { return null; }
              ~~~~~~~~
!!! error TS2314: Generic type 'Three<T, U, V>' requires 3 type argument(s).
        B3(): Three<string, T> { return null; }
              ~~~~~~~~~~~~~~~~
!!! error TS2314: Generic type 'Three<T, U, V>' requires 3 type argument(s).
    }
    
    interface I<T> {
        value: T;
    }
    
    class Y<T>
    {
        value: T;
    }
    
    class X<T>
    {
        p1: () => X;
                  ~
!!! error TS2314: Generic type 'X<T>' requires 1 type argument(s).
        p2: { [idx: number]: X }
                             ~
!!! error TS2314: Generic type 'X<T>' requires 1 type argument(s).
        p3: X[]
            ~
!!! error TS2314: Generic type 'X<T>' requires 1 type argument(s).
        p4: I<X>
              ~
!!! error TS2314: Generic type 'X<T>' requires 1 type argument(s).
        p5: X
            ~
!!! error TS2314: Generic type 'X<T>' requires 1 type argument(s).
        p6: () => Y;
                  ~
!!! error TS2314: Generic type 'Y<T>' requires 1 type argument(s).
        p7: { [idx: number]: Y }
                             ~
!!! error TS2314: Generic type 'Y<T>' requires 1 type argument(s).
        p8: Y[]
            ~
!!! error TS2314: Generic type 'Y<T>' requires 1 type argument(s).
        p9: I<Y>
              ~
!!! error TS2314: Generic type 'Y<T>' requires 1 type argument(s).
        pa: Y
            ~
!!! error TS2314: Generic type 'Y<T>' requires 1 type argument(s).
    }
    
    declare var a: {
        p1: () => X;
                  ~
!!! error TS2314: Generic type 'X<T>' requires 1 type argument(s).
        p2: { [idx: number]: X }
                             ~
!!! error TS2314: Generic type 'X<T>' requires 1 type argument(s).
        p3: X[]
            ~
!!! error TS2314: Generic type 'X<T>' requires 1 type argument(s).
        p4: I<X>
              ~
!!! error TS2314: Generic type 'X<T>' requires 1 type argument(s).
        p5: X
            ~
!!! error TS2314: Generic type 'X<T>' requires 1 type argument(s).
        p6: () => Y;
                  ~
!!! error TS2314: Generic type 'Y<T>' requires 1 type argument(s).
        p7: { [idx: number]: Y }
                             ~
!!! error TS2314: Generic type 'Y<T>' requires 1 type argument(s).
        p8: Y[]
            ~
!!! error TS2314: Generic type 'Y<T>' requires 1 type argument(s).
        p9: I<Y>
              ~
!!! error TS2314: Generic type 'Y<T>' requires 1 type argument(s).
        pa: Y
            ~
!!! error TS2314: Generic type 'Y<T>' requires 1 type argument(s).
    };
    